--- a/index.html
+++ b/index.html
@@ -1,12 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+</head>
 
-  </body>
+<body>
+  <header>
+    <section>
+      <ul>
+        <li>
+          <a>
+            <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
+          </a>
+        </li>
+        <li>
+          <form>
+            <input type="search" name="search" placeholder="Поиск:">
+          </form>
+        </li>
+        <li>
+          <p>Закладки:0</p>
+        </li>
+        <li>
+          <p>Корзина:0</p>
+        </li>
+        <li><button type="button">Оформить заказ</button></li>
+      </ul>
+    </section>
+    <section>
+      <ul>
+        <li>
+          <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
+        </li>
+        <li>
+          <p>+7 (812) 555-05-55</p>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </li>
+        <li><button type="button">Войти</button></li>
+        <li><button type="button">Регистрация</button></li>
+      </ul>
+      <nav>
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контаткты</a></li>
+        </ul>
+      </nav>
+  </header>
+  <main>
+    <div class="about-us">
+      <section>
+        <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br> строительства не оставит
+          равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>Техномарт работает со многими транспортными
+          компаниями: </p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="#">подробнее о компании</a>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
+        <a href="#">map</a>
+        <a href="#">Заблудились? Напишите нам!</a>
+      </section>
+    </div>
+  </main>
+  <footer>
+    <div class="footer-top">
+      <section>
+        <a>
+          <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
+        </a>
+        <ul>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </section>
+      <section>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
+        <ul>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </section>
+    </div>
+    <div class="footer-bottom">
+      <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+      <div class="social">
+        <ul>
+          <li><a href="#">Вконтакте</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p>Обратная связь:<br>
+        <a href="#">mail@htmlacademy.ru</a></p>
+      <p>Разработано —<br>
+        <a href="#">htmlacademy.ru</a></p>
+    </div>
+  </footer>
+</body>
 </html>
