--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <section>
+      <h2>Шапка сайта</h2>
       <ul>
         <li>
           <a>
@@ -30,6 +31,7 @@
       </ul>
     </section>
     <section>
+      <h2>Информация для покупателя</h2>
       <ul>
         <li>
           <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
@@ -41,11 +43,12 @@
         <li><button type="button">Войти</button></li>
         <li><button type="button">Регистрация</button></li>
       </ul>
+    </section>
       <nav>
         <ul>
           <li><a href="#">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -71,7 +74,9 @@
       <section>
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
-        <a href="#">map</a>
+        <a href="#">
+          <img src="map.png" width="300" height="160" alt="карта проезда">
+        </a>
         <a href="#">Заблудились? Напишите нам!</a>
       </section>
     </div>
@@ -79,18 +84,20 @@
   <footer>
     <div class="footer-top">
       <section>
+        <h2>Верхняя полоса</h2>
         <a>
           <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
         </a>
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </section>
       <section>
+      <h2>Нижняя полоса</h2>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
         <ul>
           <li><a href="#">Материалы</a></li>
