--- a/Catalog.html
+++ b/Catalog.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <section>
+            <h2>Шапка сайта</h2>
             <ul>
                 <li>
                     <a href="index.html">
@@ -30,6 +31,7 @@
             </ul>
         </section>
         <section>
+            <h2>Информация для покупателя</h2>
             <ul>
                 <li>
                     <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
@@ -39,11 +41,14 @@
                     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
                 </li>
             </ul>
-            <div class="customer-data">
-                <input type="placeholder" name="name" value="Равшан Джамшутович">
+            <div class="customer">
+                <a href="">icon</a>
+                <a href="#">Равшан Джамшутович</a>
+                <a href="#">exit</a>
                 <a href="#">мои заказы</a>
                 <a href="#">личный кабинет</a>
             </div>
+        </section>
 
             <nav>
                 <ul>
@@ -197,6 +202,7 @@
     <footer>
         <div class="footer-top">
             <section>
+                <h2>Верхняя полоса</h2>
                 <a href="index.html">
                     <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
                 </a>
@@ -209,6 +215,7 @@
                 </ul>
             </section>
             <section>
+                <h2>Нижняя полоса</h2>
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
                 <ul>
                     <li><a href="#">Материалы</a></li>
@@ -230,7 +237,7 @@
             <p>Обратная связь:<br>
                 <a href="#">mail@htmlacademy.ru</a></p>
             <p>Разработано —<br>
-                <a href="#">htmlacademy.ru</a></p>
+                <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
         </div>
     </footer>
 </body>
