--- a/Catalog.html
+++ b/Catalog.html
@@ -8,8 +8,7 @@
 
 <body>
     <header>
-        <section>
-            <h2>Шапка сайта</h2>
+        <div class="header-top">
             <ul>
                 <li>
                     <a href="index.html">
@@ -29,53 +28,46 @@
                 </li>
                 <li><button type="button">Оформить заказ</button></li>
             </ul>
-        </section>
-        <section>
-            <h2>Информация для покупателя</h2>
-            <ul>
-                <li>
-                    <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
-                </li>
-                <li>
-                    <p>+7 (812) 555-05-55</p>
-                    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-                </li>
-            </ul>
+        </div>
+        <div class="header-middle">
+            <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
+            <div class="info">
+                <p>+7 (812) 555-05-55</p>
+                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            </div>
             <div class="customer">
-                <a href="">icon</a>
                 <a href="#">Равшан Джамшутович</a>
                 <a href="#">exit</a>
                 <a href="#">мои заказы</a>
                 <a href="#">личный кабинет</a>
             </div>
-        </section>
+        </div>
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="#">Компания</a></li>
-                    <li><a href="#">Каталог</a></li>
-                    <li><a href="#">Новости</a></li>
-                    <li><a href="#">Спецпредложения</a></li>
-                    <li><a href="#">Доставка</a></li>
-                    <li><a href="#">Контаткты</a></li>
-                </ul>
-            </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="#">Компания</a></li>
+                <li><a href="#">Каталог</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Спецпредложения</a></li>
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Контаткты</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <ul>
-            <li><a href="index.html"></a></li>
+            <li><a href="index.html">
+                    <img src="home" width="20" height="20" alt="домой">
+                </a></li>
             <li><a href="#">каталог</a></li>
             <li><a href="#">инструмент</a></li>
             <li>перфораторы</li>
         </ul>
         <h1>перфораторы</h1>
         <section>
-            <h2>производители:</h2>
+            <h2>Форма</h2>
             <!-- Здесь будет форма -->
-            <h2>питание:</h2>
-            <!-- Здесь будет форма -->
-            <button type="button">показать</button>
         </section>
         <section>
             <h2>Список товаров</h2>
@@ -201,8 +193,7 @@
     </main>
     <footer>
         <div class="footer-top">
-            <section>
-                <h2>Верхняя полоса</h2>
+            <div class="first-line">
                 <a href="index.html">
                     <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
                 </a>
@@ -213,9 +204,8 @@
                     <li><a href="#">Доставка</a></li>
                     <li><a href="#">Контакты</a></li>
                 </ul>
-            </section>
-            <section>
-                <h2>Нижняя полоса</h2>
+            </div>
+            <div class="second-line">
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
                 <ul>
                     <li><a href="#">Материалы</a></li>
@@ -223,7 +213,7 @@
                     <li><a href="#">Инструмент</a></li>
                     <li><a href="#">Спецпредложения</a></li>
                 </ul>
-            </section>
+            </div>
         </div>
         <div class="footer-bottom">
             <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
@@ -234,11 +224,14 @@
                     <li><a href="#">Инстаграм</a></li>
                 </ul>
             </div>
-            <p>Обратная связь:<br>
-                <a href="#">mail@htmlacademy.ru</a></p>
-            <p>Разработано —<br>
-                <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+            <div class="contact-us">
+                <p>Обратная связь:<br>
+                    <a href="#">mail@htmlacademy.ru</a></p>
+                <p>Разработано —<br>
+                    <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+            </div>
         </div>
     </footer>
 </body>
+
 </html>
