--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 <body>
   <header>
-    <section>
-      <h2>Шапка сайта</h2>
+    <div class="header-top">
       <ul>
         <li>
           <a>
@@ -29,32 +28,29 @@
         </li>
         <li><button type="button">Оформить заказ</button></li>
       </ul>
-    </section>
-    <section>
-      <h2>Информация для покупателя</h2>
+    </div>
+    <div class="header-middle">
+      <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
+      <div class="info">
+        <p>+7 (812) 555-05-55</p>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </div>
+      <div class="account">
+        <button type="button">Войти</button>
+        <button type="button">Регистрация</button>
+      </div>
+    </div>
+    <nav>
       <ul>
-        <li>
-          <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
-        </li>
-        <li>
-          <p>+7 (812) 555-05-55</p>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        </li>
-        <li><button type="button">Войти</button></li>
-        <li><button type="button">Регистрация</button></li>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контаткты</a></li>
       </ul>
-    </section>
-      <nav>
-        <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контаткты</a></li>
-        </ul>
-      </nav>
+    </nav>
   </header>
   <main>
     <div class="about-us">
@@ -83,8 +79,7 @@
   </main>
   <footer>
     <div class="footer-top">
-      <section>
-        <h2>Верхняя полоса</h2>
+      <div class="first-line">
         <a>
           <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
         </a>
@@ -95,9 +90,8 @@
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-      </section>
-      <section>
-      <h2>Нижняя полоса</h2>
+      </div>
+      <div class="second-line">
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
         <ul>
           <li><a href="#">Материалы</a></li>
@@ -105,7 +99,7 @@
           <li><a href="#">Инструмент</a></li>
           <li><a href="#">Спецпредложения</a></li>
         </ul>
-      </section>
+      </div>
     </div>
     <div class="footer-bottom">
       <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
@@ -116,11 +110,14 @@
           <li><a href="#">Инстаграм</a></li>
         </ul>
       </div>
-      <p>Обратная связь:<br>
-        <a href="#">mail@htmlacademy.ru</a></p>
-      <p>Разработано —<br>
-        <a href="#">htmlacademy.ru</a></p>
+      <div class="contact-us">
+        <p>Обратная связь:<br>
+          <a href="#">mail@htmlacademy.ru</a></p>
+        <p>Разработано —<br>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+      </div>
     </div>
   </footer>
 </body>
+
 </html>
