--- a/Catalog.html
+++ b/Catalog.html
@@ -9,25 +9,15 @@
 <body>
     <header>
         <div class="header-top">
-            <ul>
-                <li>
                     <a href="index.html">
                         <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
                     </a>
-                </li>
-                <li>
                     <form>
                         <input type="search" name="search" placeholder="Поиск:">
                     </form>
-                </li>
-                <li>
                     <p>Закладки:0</p>
-                </li>
-                <li>
                     <p>Корзина:10</p>
-                </li>
-                <li><button type="button">Оформить заказ</button></li>
-            </ul>
+               <button type="button">Оформить заказ</button>
         </div>
         <div class="header-middle">
             <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
