Разметка сайта для доп задания

--- a/Catalog.html
+++ b/Catalog.html
@@ -9,15 +9,15 @@
 <body>
     <header>
         <div class="header-top">
-                    <a href="index.html">
-                        <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
-                    </a>
-                    <form>
-                        <input type="search" name="search" placeholder="Поиск:">
-                    </form>
-                    <p>Закладки:0</p>
-                    <p>Корзина:10</p>
-               <button type="button">Оформить заказ</button>
+            <a href="index.html">
+                <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
+            </a>
+            <form>
+                <input type="search" name="search" placeholder="Поиск:">
+            </form>
+            <p>Закладки:0</p>
+            <p>Корзина:10</p>
+            <button type="button">Оформить заказ</button>
         </div>
         <div class="header-middle">
             <p>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
@@ -54,131 +54,161 @@
             <li><a href="#">инструмент</a></li>
             <li>перфораторы</li>
         </ul>
-        <h1>перфораторы</h1>
+        <h3>перфораторы</h3>
         <section>
+            <p>Фильтр:</p>
             <h2>Форма</h2>
             <!-- Здесь будет форма -->
         </section>
         <section>
             <h2>Список товаров</h2>
+            <div class="sort-by">
+                <p>Сортировка:</p>
+                <ul>
+                    <li><a href="#">По цене</a></li>
+                    <li><a href="#">По типу</a></li>
+                    <li><a href="#">По функционалу</a></li>
+                </ul>
+                <span>
+                    <!-- Здесь будет треугольники css --></span>
+                <span>
+                    <!-- Здесь будет треугольники css --></span>
+            </div>
+            <div class="product-items">
+                <ul>
+                    <li>
+                        <h5>
+                            <a href="#">
+                                <span>Перфоратор BOSCH</span>
+                                <span>BFG 3000</span>
+                            </a>
+                        </h5>
+                        <a href="">
+                            <img src="product-1" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
+                        </a>
+                        <p>22500 Р.</p>
+                        <button type="button">15500 Р.</button>
+                    </li>
+                    <li>
+                        <h5>
+                            <a href="#">
+                                <span>Перфоратор BOSCH</span>
+                                <span>BFG 6000</span>
+                            </a>
+                        </h5>
+                        <a href="">
+                            <img src="product-2" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
+                        </a>
+                        <p>30500 Р.</p>
+                        <button type="button">25500 Р.</button>
+                    </li>
+                    <li>
+                        <h5>
+                            <a href="#">
+                                <span>Перфоратор BOSCH</span>
+                                <span>BFG 2000</span>
+                            </a>
+                        </h5>
+                        <a href="">
+                            <img src="product-3" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
+                        </a>
+                        <a href="">купить</a>
+                        <button type="button">в закладки</button>
+                        <button type="button">12500 Р.</button>
+                    </li>
+                    <li>
+                        <h5>
+                            <a href="#">
+                                <span>Перфоратор BOSCH</span>
+                                <span>BFG 3000</span>
+                            </a>
+                        </h5>
+                        <a href="">
+                            <img src="product-4" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
+                        </a>
+                        <p>22500 Р.</p>
+                        <button type="button">15500 Р.</button>
+                    </li>
+                    <li>
+                        <h5>
+                            <a href="#">
+                                <span>Перфоратор BOSCH</span>
+                                <span>BFG 6000</span>
+                            </a>
+                        </h5>
+                        <a href="">
+                            <img src="product-5" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
+                        </a>
+                        <p>30500 Р.</p>
+                        <button type="button">25500 Р.</button>
+                    </li>
+                    <li>
+                        <h5>
+                            <a href="#">
+                                <span>Перфоратор BOSCH</span>
+                                <span>BFG 2000</span>
+                            </a>
+                        </h5>
+                        <a href="">
+                            <img src="product-6" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
+                        </a>
+                        <button type="button">12500 Р.</button>
+                    </li>
+                    <li>
+                        <h5>
+                            <a href="#">
+                                <span>Перфоратор BOSCH</span>
+                                <span>BFG 3000</span>
+                            </a>
+                        </h5>
+                        <a href="">
+                            <img src="product-7" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
+                        </a>
+                        <p>22500 Р.</p>
+                        <button type="button">15500 Р.</button>
+                    </li>
+                    <li>
+                        <h5>
+                            <a href="#">
+                                <span>Перфоратор BOSCH</span>
+                                <span>BFG 6000</span>
+                            </a>
+                        </h5>
+                        <a href="">
+                            <img src="product-8" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
+                        </a>
+                        <p>30500 Р.</p>
+                        <button type="button">25500 Р.</button>
+                    </li>
+                    <li>
+                        <h5>
+                            <a href="#">
+                                <span>Перфоратор BOSCH</span>
+                                <span>BFG 2000</span>
+                            </a>
+                        </h5>
+                        <a href="">
+                            <img src="product-9" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
+                        </a>
+                        <button type="button">12500 Р.</button>
+                    </li>
+                </ul>
+            </div>
             <ul>
-                <li>
-                    <h3>
-                        <a href="#">
-                            <span>Перфоратор BOSCH</span>
-                            <span>BFG 3000</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="product-1" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
-                    </a>
-                    <p>22500 Р.</p>
-                    <button type="button">15500 Р.</button>
-                </li>
-                <li>
-                    <h3>
-                        <a href="#">
-                            <span>Перфоратор BOSCH</span>
-                            <span>BFG 6000</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="product-2" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
-                    </a>
-                    <p>30500 Р.</p>
-                    <button type="button">25500 Р.</button>
-                </li>
-                <li>
-                    <h3>
-                        <a href="#">
-                            <span>Перфоратор BOSCH</span>
-                            <span>BFG 2000</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="product-3" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
-                    </a>
-                    <a href="">купить</a>
-                    <button type="button">в закладки</button>
-                    <button type="button">12500 Р.</button>
-                </li>
-                <li>
-                    <h3>
-                        <a href="#">
-                            <span>Перфоратор BOSCH</span>
-                            <span>BFG 3000</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="product-4" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
-                    </a>
-                    <p>22500 Р.</p>
-                    <button type="button">15500 Р.</button>
-                </li>
-                <li>
-                    <h3>
-                        <a href="#">
-                            <span>Перфоратор BOSCH</span>
-                            <span>BFG 6000</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="product-5" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
-                    </a>
-                    <p>30500 Р.</p>
-                    <button type="button">25500 Р.</button>
-                </li>
-                <li>
-                    <h3>
-                        <a href="#">
-                            <span>Перфоратор BOSCH</span>
-                            <span>BFG 2000</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="product-6" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
-                    </a>
-                    <button type="button">12500 Р.</button>
-                </li>
-                <li>
-                    <h3>
-                        <a href="#">
-                            <span>Перфоратор BOSCH</span>
-                            <span>BFG 3000</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="product-7" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
-                    </a>
-                    <p>22500 Р.</p>
-                    <button type="button">15500 Р.</button>
-                </li>
-                <li>
-                    <h3>
-                        <a href="#">
-                            <span>Перфоратор BOSCH</span>
-                            <span>BFG 6000</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="product-8" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
-                    </a>
-                    <p>30500 Р.</p>
-                    <button type="button">25500 Р.</button>
-                </li>
-                <li>
-                    <h3>
-                        <a href="#">
-                            <span>Перфоратор BOSCH</span>
-                            <span>BFG 2000</span>
-                        </a>
-                    </h3>
-                    <a href="">
-                        <img src="product-9" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
-                    </a>
-                    <button type="button">12500 Р.</button>
-                </li>
+                <li><a>1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">Cледующая</a></li>
             </ul>
+        </section>
+        <section>
+            <h3>Пара слов о перфораторах</h3>
+            <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в
+                кирпиче, бетоне и камне.<br>
+                Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
+                дрели, шуруповерта и отбойного молотка.<br>
+                В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
+                ударная дрель.</p>
         </section>
     </main>
     <footer>
