--- a/Catalog.html
+++ b/Catalog.html
@@ -54,152 +54,150 @@
             <li><a href="#">инструмент</a></li>
             <li>перфораторы</li>
         </ul>
-        <h3>перфораторы</h3>
         <section>
-            <p>Фильтр:</p>
-            <h2>Форма</h2>
-            <!-- Здесь будет форма -->
-        </section>
-        <section>
-            <h2>Список товаров</h2>
-            <div class="sort-by">
-                <p>Сортировка:</p>
-                <ul>
-                    <li><a href="#">По цене</a></li>
-                    <li><a href="#">По типу</a></li>
-                    <li><a href="#">По функционалу</a></li>
-                </ul>
-                <span>
-                    <!-- Здесь будет треугольники css --></span>
-                <span>
-                    <!-- Здесь будет треугольники css --></span>
+            <h3>перфораторы</h3>
+            <div class="items-filter">
+                <p>Фильтр:</p>
+                <!-- Здесь будет форма -->
             </div>
-            <div class="product-items">
+            <div class="container perfarators">
+                <div class="sort-by">
+                    <p>Сортировка:</p>
+                    <ul>
+                        <li><button type="button">По цене</button></li>
+                        <li><button type="button">По типу</button></li>
+                        <li><button type="button">По функционалу</button></li>
+                    </ul>
+                    <div class="triangle up-triangle"></div>
+                    <div class="triangle down-triangle"></div>
+                </div>
+                <div class="items">
+                    <ul>
+                        <li>
+                            <h5>
+                                <a href="#">
+                                    <span>Перфоратор BOSCH</span>
+                                    <span>BFG 3000</span>
+                                </a>
+                            </h5>
+                            <a href="">
+                                <img src="product-1" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
+                            </a>
+                            <p>22500 Р.</p>
+                            <button type="button">15500 Р.</button>
+                        </li>
+                        <li>
+                            <h5>
+                                <a href="#">
+                                    <span>Перфоратор BOSCH</span>
+                                    <span>BFG 6000</span>
+                                </a>
+                            </h5>
+                            <a href="">
+                                <img src="product-2" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
+                            </a>
+                            <p>30500 Р.</p>
+                            <button type="button">25500 Р.</button>
+                        </li>
+                        <li>
+                            <h5>
+                                <a href="#">
+                                    <span>Перфоратор BOSCH</span>
+                                    <span>BFG 2000</span>
+                                </a>
+                            </h5>
+                            <a href="">
+                                <img src="product-3" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
+                            </a>
+                            <a href="">купить</a>
+                            <button type="button">в закладки</button>
+                            <button type="button">12500 Р.</button>
+                        </li>
+                        <li>
+                            <h5>
+                                <a href="#">
+                                    <span>Перфоратор BOSCH</span>
+                                    <span>BFG 3000</span>
+                                </a>
+                            </h5>
+                            <a href="">
+                                <img src="product-4" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
+                            </a>
+                            <p>22500 Р.</p>
+                            <button type="button">15500 Р.</button>
+                        </li>
+                        <li>
+                            <h5>
+                                <a href="#">
+                                    <span>Перфоратор BOSCH</span>
+                                    <span>BFG 6000</span>
+                                </a>
+                            </h5>
+                            <a href="">
+                                <img src="product-5" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
+                            </a>
+                            <p>30500 Р.</p>
+                            <button type="button">25500 Р.</button>
+                        </li>
+                        <li>
+                            <h5>
+                                <a href="#">
+                                    <span>Перфоратор BOSCH</span>
+                                    <span>BFG 2000</span>
+                                </a>
+                            </h5>
+                            <a href="">
+                                <img src="product-6" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
+                            </a>
+                            <button type="button">12500 Р.</button>
+                        </li>
+                        <li>
+                            <h5>
+                                <a href="#">
+                                    <span>Перфоратор BOSCH</span>
+                                    <span>BFG 3000</span>
+                                </a>
+                            </h5>
+                            <a href="">
+                                <img src="product-7" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
+                            </a>
+                            <p>22500 Р.</p>
+                            <button type="button">15500 Р.</button>
+                        </li>
+                        <li>
+                            <h5>
+                                <a href="#">
+                                    <span>Перфоратор BOSCH</span>
+                                    <span>BFG 6000</span>
+                                </a>
+                            </h5>
+                            <a href="">
+                                <img src="product-8" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
+                            </a>
+                            <p>30500 Р.</p>
+                            <button type="button">25500 Р.</button>
+                        </li>
+                        <li>
+                            <h5>
+                                <a href="#">
+                                    <span>Перфоратор BOSCH</span>
+                                    <span>BFG 2000</span>
+                                </a>
+                            </h5>
+                            <a href="">
+                                <img src="product-9" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
+                            </a>
+                            <button type="button">12500 Р.</button>
+                        </li>
+                    </ul>
+                </div>
                 <ul>
-                    <li>
-                        <h5>
-                            <a href="#">
-                                <span>Перфоратор BOSCH</span>
-                                <span>BFG 3000</span>
-                            </a>
-                        </h5>
-                        <a href="">
-                            <img src="product-1" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
-                        </a>
-                        <p>22500 Р.</p>
-                        <button type="button">15500 Р.</button>
-                    </li>
-                    <li>
-                        <h5>
-                            <a href="#">
-                                <span>Перфоратор BOSCH</span>
-                                <span>BFG 6000</span>
-                            </a>
-                        </h5>
-                        <a href="">
-                            <img src="product-2" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
-                        </a>
-                        <p>30500 Р.</p>
-                        <button type="button">25500 Р.</button>
-                    </li>
-                    <li>
-                        <h5>
-                            <a href="#">
-                                <span>Перфоратор BOSCH</span>
-                                <span>BFG 2000</span>
-                            </a>
-                        </h5>
-                        <a href="">
-                            <img src="product-3" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
-                        </a>
-                        <a href="">купить</a>
-                        <button type="button">в закладки</button>
-                        <button type="button">12500 Р.</button>
-                    </li>
-                    <li>
-                        <h5>
-                            <a href="#">
-                                <span>Перфоратор BOSCH</span>
-                                <span>BFG 3000</span>
-                            </a>
-                        </h5>
-                        <a href="">
-                            <img src="product-4" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
-                        </a>
-                        <p>22500 Р.</p>
-                        <button type="button">15500 Р.</button>
-                    </li>
-                    <li>
-                        <h5>
-                            <a href="#">
-                                <span>Перфоратор BOSCH</span>
-                                <span>BFG 6000</span>
-                            </a>
-                        </h5>
-                        <a href="">
-                            <img src="product-5" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
-                        </a>
-                        <p>30500 Р.</p>
-                        <button type="button">25500 Р.</button>
-                    </li>
-                    <li>
-                        <h5>
-                            <a href="#">
-                                <span>Перфоратор BOSCH</span>
-                                <span>BFG 2000</span>
-                            </a>
-                        </h5>
-                        <a href="">
-                            <img src="product-6" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
-                        </a>
-                        <button type="button">12500 Р.</button>
-                    </li>
-                    <li>
-                        <h5>
-                            <a href="#">
-                                <span>Перфоратор BOSCH</span>
-                                <span>BFG 3000</span>
-                            </a>
-                        </h5>
-                        <a href="">
-                            <img src="product-7" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
-                        </a>
-                        <p>22500 Р.</p>
-                        <button type="button">15500 Р.</button>
-                    </li>
-                    <li>
-                        <h5>
-                            <a href="#">
-                                <span>Перфоратор BOSCH</span>
-                                <span>BFG 6000</span>
-                            </a>
-                        </h5>
-                        <a href="">
-                            <img src="product-8" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
-                        </a>
-                        <p>30500 Р.</p>
-                        <button type="button">25500 Р.</button>
-                    </li>
-                    <li>
-                        <h5>
-                            <a href="#">
-                                <span>Перфоратор BOSCH</span>
-                                <span>BFG 2000</span>
-                            </a>
-                        </h5>
-                        <a href="">
-                            <img src="product-9" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
-                        </a>
-                        <button type="button">12500 Р.</button>
-                    </li>
+                    <li><a>1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">Cледующая</a></li>
                 </ul>
             </div>
-            <ul>
-                <li><a>1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">Cледующая</a></li>
-            </ul>
         </section>
         <section>
             <h3>Пара слов о перфораторах</h3>
