--- a/Catalog.html
+++ b/Catalog.html
@@ -67,9 +67,9 @@
                         <li><button type="button">По цене</button></li>
                         <li><button type="button">По типу</button></li>
                         <li><button type="button">По функционалу</button></li>
+                        <li><button type="button" arial-label="triangle-up"></button></li>
+                        <li><button type="button" arial-label="triangle-down"></button></li>
                     </ul>
-                    <div class="triangle up-triangle"></div>
-                    <div class="triangle down-triangle"></div>
                 </div>
                 <div class="items">
                     <ul>
@@ -200,11 +200,11 @@
             </div>
         </section>
         <section>
-            <h3>Пара слов о перфораторах</h3>
+            <p>Пара слов о перфораторах</p>
             <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в
-                кирпиче, бетоне и камне.<br>
+                кирпиче, бетоне и камне.
                 Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
-                дрели, шуруповерта и отбойного молотка.<br>
+                дрели, шуруповерта и отбойного молотка.
                 В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
                 ударная дрель.</p>
         </section>
