--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <p>Дрели</p>
         <p>Соседям на радость!</p>
         <a href="catalog.html">Открыть каталог</a>
-        <div class="arrow-left"></div>
-        <div class="arrow-right"></div>
+        <button type="button" arial-label="arrow-left"></button>
+        <button type="button" arial-label="arrow-right"></button>
       </div>
       <div class="sale">
         <h4>Скидки 50%</h4>
