--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <header>
     <div class="header-top">
       <a>
-        <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
+        <img src="img/img-header/technomart-logo-header.png" width="220" height="47" alt="Логотип магазина «Техномарт»">
       </a>
       <form>
         <input type="search" name="search" placeholder="Поиск:">
       </form>
+      
       <p>Закладки:0</p>
       <p>Корзина:0</p>
       <button type="button">Оформить заказ</button>
@@ -48,17 +49,17 @@
       <div class="materials">
         <h4>Материалы</h4>
         <a href="#">На любой вкус </a>
-        <img src="img/paint.svg" width="80" height="80" alt="Материалы">
+        <img src="img/img-index-main/icon-1.svg" width="44" height="65" alt="Материалы">
       </div>
       <div class="tools">
         <h4>Инструмент</h4>
         <a href="#">На все случаи </a>
-        <img src="img/tools.svg" width="80" height="80" alt="Инструмент">
+        <img src="img/img-index-main/icon-2.svg" width="75" height="61" alt="Инструмент">
       </div>
       <div class="technic">
         <h4>Техника</h4>
         <a href="#">Для стройки</a>
-        <img src="img/technic.svg" width="80" height="80" alt="Техника для стройки">
+        <img src="img/img-index-main/icon-3.svg" width="78" height="62" alt="Техника для стройки">
       </div>
       <div class="slider">
         <p>Дрели</p>
@@ -70,12 +71,12 @@
       <div class="sale">
         <h4>Скидки 50%</h4>
         <a href="#">На 350 товаров</a>
-        <img src="img/sale.svg" width="80" height="80" alt="Распродажа">
+        <img src="img/img-index-main/icon-4.svg" width="59" height="72" alt="Распродажа">
       </div>
       <div class="delivery">
         <h4>Доставка</h4>
         <a href="#">Бесплатно</a>
-        <img src="img/delivery.svg" width="80" height="80" alt="Доставка">
+        <img src="img/img-index-main/icon-4.svg" width="78" height="63" alt="Доставка">
       </div>
     </section>
     <section>
@@ -93,7 +94,7 @@
               </a>
             </h5>
             <a href="">
-              <img src="product-1" width="220" height="160" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img/img-index-main/perforator-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             </a>
             <p>32500 Р.</p>
             <button type="button">25500 Р.</button>
@@ -106,7 +107,7 @@
               </a>
             </h5>
             <a href="">
-              <img src="product-2" width="220" height="160" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/img-index-main/perforator-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </a>
             <p>22500 Р.</p>
             <button type="button">15500 Р.</button>
@@ -119,7 +120,7 @@
               </a>
             </h5>
             <a href="">
-              <img src="product-3" width="220" height="160" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/img-index-main/perforator-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </a>
             <p>30500 Р.</p>
             <button type="button">25500 Р.</button>
@@ -132,7 +133,7 @@
               </a>
             </h5>
             <a href="">
-              <img src="product-4" width="220" height="160" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img/img-index-main/perforator-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </a>
             <button type="button">12500 Р.</button>
           </li>
@@ -148,42 +149,42 @@
         <ul>
           <li>
             <a href="#">
-              <img src="img/logo-bosch.png" width="140" height="60" alt="логотип BOCSH">
+              <img src="img/img-index-main/bosch-logo.png" width="126" height="37" alt="логотип BOCSH">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="img/logo-makita.png" width="140" height="60" alt="логотип MAKITA">
+              <img src="img/img-index-main/makita-logo.png" width="123" height="40" alt="логотип MAKITA">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="img/logo-dewalt.png" width="140" height="60" alt="логотип DEWALT">
+              <img src="img/img-index-main/dewalt-logo.png" width="146" height="44" alt="логотип DEWALT">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="img/logo-interskol.png" width="140" height="60" alt="логотип ИНТЕРСКОЛ">
+              <img src="img/img-index-main/interskol-logo.png" width="200" height="88" alt="логотип ИНТЕРСКОЛ">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="img/logo-hitachi.png" width="140" height="60" alt="логотип HITACHI">
+              <img src="img/img-index-main/hitachi-logo.png" width="169" height="31" alt="логотип HITACHI">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="img/logo-lg.png" width="140" height="60" alt="логотип LG">
+              <img src="img/img-index-main/lg-logo.png" width="121" height="73" alt="логотип LG">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="img/logo-aeg.png" width="140" height="60" alt="логотип AEG">
+              <img src="img/img-index-main/aeg-logo.png" width="151" height="96" alt="логотип AEG">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="img/logo-metabo.png" width="140" height="60" alt="логотип METABO">
+              <img src="img/img-index-main/metabo-logo.png" width="204" height="69" alt="логотип METABO">
             </a>
           </li>
         </ul>
@@ -233,7 +234,7 @@
         <h3>Контакты</h3>
         <p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
         <a href="#">
-          <img src="map.png" width="300" height="160" alt="карта проезда">
+          <img src="img/img-index-main/map.png" width="300" height="158" alt="карта проезда">
         </a>
         <a href="#">Заблудились? Напишите нам!</a>
       </section>
@@ -243,7 +244,7 @@
     <div class="footer-top">
       <div class="first-line">
         <a>
-          <img src="img/tehnomart-logo.svg" width="220" height="42" alt="Логотип магазина «Техномарт»">
+          <img src="img/img-footer/technomart-logo-footer.png" width="220" height="68" alt="Логотип магазина «Техномарт»">
         </a>
         <ul>
           <li><a href="#">Компания</a></li>
